<resources>
    <string name="app_name">This Project</string>
    <string name="app_name_detail">Peer to Peer Package\nDelivery System</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_home">Home</string>

    <!--  Sign up activity strings -->
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_email_hint">E-mail</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_phone">Phone Number</string>
    <string name="text_not_registered">Not Registered?</string>

    <!--  Sign in activity strings -->
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_email_hint">E-mail</string>
    <string name="sign_in_password_hint">Password</string>

    <!--  Main activity strings  -->
    <string name="main_sign_out_button_text">Sign Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_API_key">AIzaSyC0eEkojdpuMhiKucUz5EeK-5OC1FFyLOo</string>
    <string name="bs_header">Select image source</string>
    <string name="bs_gallery">Select from gallery</string>
    <string name="bs_camera">Select from camera</string>
    <string name="bs_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>


    <!--  Request Dialog  -->
    <string name="request_text">Request</string>
    <string name="request_item_name_text">Item Name</string>
    <string name="request_item_details">Item Details</string>
    <string name="request_expected_date">Expected Delivery Date</string>
    <string name="request_expected_time">Expected Delivery Time</string>
    <string name="request_drop_location">Select Drop Location</string>

    <string name="request_str">Request</string>
    <string name="respond_str">Respond</string>
    <string name="status_str">Status</string>

    <!--  Profile Activity  -->
    <string name="title_activity_profile">Profile</string>
    <string name="profile_username_label">Name</string>
    <string name="profile_name_image_desc">Name Image Asset</string>
    <string name="profile_name_edit_desc">Name Edit Asset</string>
    <string name="profile_phone_label">Mobile Number</string>
    <string name="profile_phone_image_desc">Phone Image Asset</string>
    <string name="profile_phone_edit_desc">Phone Edit Asset</string>
    <string name="profile_email_label">Email ID</string>
    <string name="profile_email_image_desc">Email Image Asset</string>
    <string name="profile_email_edit_desc">Email Edit Asset</string>
    <string name="profile_password_label">Password</string>
    <string name="profile_password_image_desc">Password Image Asset</string>
    <string name="profile_password_edit_desc">Password Edit Asset</string>
    <string name="profile_password_text">**********</string>
    <string name="profile_save_button">Save</string>

    <!--  Change Password Activity -->
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="title_activity_register_user">User Registration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  Navigation Drawer  -->
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_request_history">Your Requests</string>
    <string name="nav_menu_response_history">Your Responses</string>
    <string name="nav_menu_sign_out">Sign Out</string>
    <string name="nav_menu_share">Share</string>
    <string name="title_activity_request_history">Request History</string>

</resources>

