<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_image_home"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_image_profile"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/nav_request_history"
            android:icon="@drawable/ic_image_history"
            android:title="@string/nav_menu_request_history" />
        <item
            android:id="@+id/nav_response_history"
            android:icon="@drawable/ic_image_history"
            android:title="@string/nav_menu_response_history" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/nav_menu_sign_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_menu_share" />
        </menu>
    </item>

</menu>
