<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profile_phone_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_phone_image_desc"
            android:src="@drawable/ic_image_phone" />

        <ImageView
            android:id="@+id/profile_phone_edit_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_phone_edit_desc"
            android:src="@drawable/ic_image_edit" />

        <EditText
            android:id="@+id/profile_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_phone_image"
            android:layout_toStartOf="@id/profile_phone_edit_image"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="phone"
            android:paddingTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/profile_phone_image"
            android:layout_toStartOf="@id/profile_phone_edit_image"
            android:labelFor="@id/profile_phone_text"
            android:text="@string/profile_phone_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profile_username_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_name_image_desc"
            android:src="@drawable/ic_image_username" />

        <ImageView
            android:id="@+id/profile_username_edit_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_name_edit_desc"
            android:src="@drawable/ic_image_edit" />

        <EditText
            android:id="@+id/profile_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_username_image"
            android:layout_toStartOf="@id/profile_username_edit_image"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="text"
            android:paddingTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/profile_username_image"
            android:layout_toStartOf="@id/profile_username_edit_image"
            android:labelFor="@id/profile_username_text"
            android:text="@string/profile_username_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profile_email_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_email_image_desc"
            android:src="@drawable/ic_image_email" />

        <ImageView
            android:id="@+id/profile_email_edit_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_email_edit_desc"
            android:src="@drawable/ic_image_edit" />

        <EditText
            android:id="@+id/profile_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_email_image"
            android:layout_toStartOf="@id/profile_email_edit_image"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:paddingTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_email_image"
            android:layout_toStartOf="@id/profile_email_edit_image"
            android:labelFor="@id/profile_email_text"
            android:text="@string/profile_email_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profile_password_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_password_image_desc"
            android:src="@drawable/ic_image_password" />

        <ImageView
            android:id="@+id/profile_password_edit_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/profile_password_edit_desc"
            android:src="@drawable/ic_image_edit" />

        <EditText
            android:id="@+id/profile_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/profile_password_image"
            android:layout_toStartOf="@id/profile_password_edit_image"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:paddingTop="24dp"
            android:text="@string/profile_password_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/profile_password_image"
            android:layout_toStartOf="@id/profile_password_edit_image"
            android:labelFor="@id/profile_password_text"
            android:text="@string/profile_password_label" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorBlack"
        android:text="@string/profile_save_button"
        android:textColor="@color/colorGreenLight" />
</LinearLayout>