<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:background="@color/grey_300"
            android:gravity="center"
            android:text="@string/request_text"
            android:textColor="@color/colorGreen"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/request_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/request_item_name_text"
            android:inputType="text" />


        <EditText
            android:id="@+id/request_item_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:hint="@string/request_item_details"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/request_expected_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:focusable="false"
            android:hint="@string/request_expected_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/request_expected_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:focusable="false"
            android:onClick="showTimePickerDialog"
            android:hint="@string/request_expected_time"
            android:inputType="time" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorBlack"
            android:text="@string/request_drop_location"
            android:textColor="@color/colorGreenLight"
            android:id="@+id/drop_location_button"/>
    </LinearLayout>
</ScrollView>